--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lucide-react": "^0.465.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.3",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
