--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "APP_NAME",
-  "short_name": "APP_SHORT_NAME",
-  "description": "APP_DESCRIPTION",
+  "name": "SolarShakti",
+  "short_name": "SolarShakti",
+  "description": "SolarShakti",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#FFFFFF",
