--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,3 @@
 {
-	"extends": ["next/core-web-vitals"],
-	"parser": "@typescript-eslint/parser",
-	"plugins": ["@typescript-eslint"],
-	"rules": {
-		"@typescript-eslint/ban-types": "off",
-		"@typescript-eslint/no-unsafe-member-access": "off",
-		"@typescript-eslint/no-unsafe-assignment": "off"
-	}
+	"extends": "next/core-web-vitals"
 }
