--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-webcam": "^7.2.0",
     "recharts": "^2.14.1",
     "sharp": "^0.33.4",
