--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
+    "react-simple-chatbot": "^0.6.1",
     "react-webcam": "^7.2.0",
     "recharts": "^2.14.1",
     "sharp": "^0.33.4",
